cabal-version: 3.0
name: dhscanner
version: 0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license: MIT

-- The file containing the license text.
license-file: LICENSE

-- The package author(s).
author: Oren

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: Oren

-- A copyright notice.
-- copyright:
build-type: Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

executable parser

    main-is: Main.hs

    other-modules:
        Ast,
        Token,
        Lexer,
        Parser,
        Location

    build-tool-depends: alex:alex, happy:happy

    build-depends:
        base ^>=4.19.0.0,
        containers,
        aeson,
        array,
        yesod,
        text

    hs-source-dirs:
        src,
        dhscanner.ast/src

    ghc-options: -Wall -Werror=missing-fields
    
    default-language: Haskell2010
